--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -1,9 +1,3 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
 one:
-  content: MyText
-  user: one
-
-two:
-  content: MyText
-  user: two
+  content: "Hello, world!"
+  user: abdullah
