--- a/test/fixtures/profiles.yml
+++ b/test/fixtures/profiles.yml
@@ -1,9 +1,2 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-one:
-  nickname: MyString
-  profile_picture: MyString
-
-two:
-  nickname: MyString
-  profile_picture: MyString
+abdullah:
+  user: abdullah
